2005-11-16  Michael Smith <msmith@fluendo.com>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_clear), (gst_ogg_mux_reset),
	(gst_ogg_mux_init), (gst_ogg_mux_request_new_pad),
	(gst_ogg_mux_push_buffer), (gst_ogg_mux_dequeue_page),
	(gst_ogg_mux_pad_queue_page), (gst_ogg_mux_queue_pads),
	(gst_ogg_mux_collected), (gst_ogg_mux_clear_collectpads),
	(gst_ogg_mux_change_state):
	  Fix leaking collectpads.

2005-11-16  Edward Hervey  <edward@fluendo.com>

	* gst/videorate/gstvideorate.c: (gst_videorate_blank_data),
	(gst_videorate_event), (gst_videorate_chain):
	Handle segment seeks

2005-11-16  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_provide_clock),
	(gst_base_audio_sink_change_state):
	Set ringbuffer to non-flushing when going to PAUSED, set to
	flushing again when going to READY.

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_init),
	(gst_ring_buffer_stop):
	Start in flushing mode by default.
	Don't set flushing in the _stop method, let the app call
	this explicitly.

2005-11-16  Julien MOUTTE  <julien@moutte.net>

	* gst-libs/gst/video/gstvideosink.c: (gst_video_sink_center_rect):
	* gst-libs/gst/video/videosink.h: Add helper function needed
	for video sinks.

2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/videoscale/gstvideoscale.c:
	(gst_videoscale_handle_src_event):
	  Don't leak reference to pad parent.

2005-11-16  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_stop):
	Set ringbuffer to flushing when stopping so that we don't
	block on wait_segment anymore and livelock.

2005-11-16  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (send_event), (do_seek),
	(loop_toggle_cb), (segment_done), (main):
	Added looping checkbox.

2005-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_typefind),
	(gst_ogg_demux_init):
	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_base_init),