@@ -20,6 +20,10 @@
  * Boston, MA 02111-1307, USA.
  */
 
+#ifdef HAVE_CONFIG_H
+#  include "config.h"
+#endif
+
 #include <unistd.h>
 
 #include <gst/check/gstcheck.h>
@@ -28,32 +32,48 @@ GST_START_TEST (test_state_changes)
 {
   GstElement *element;
   GList *features, *f;
+  GList *plugins, *p;
 
-  features = gst_registry_get_feature_list (gst_registry_get_default (),
-      GST_TYPE_ELEMENT_FACTORY);
+  GST_DEBUG ("testing elements from source %s", PACKAGE);
 
-  for (f = features; f; f = f->next) {
-    GstPluginFeature *feature = f->data;
-    const gchar *name = gst_plugin_feature_get_name (feature);
+  plugins = gst_registry_get_plugin_list (gst_registry_get_default ());
 
-    GST_DEBUG ("testing element %s", name);
-    element = gst_element_factory_make (name, name);
-    if (GST_IS_PIPELINE (element)) {
-      GST_DEBUG ("element %s is a pipeline", name);
+  for (p = plugins; p; p = p->next) {
+    GstPlugin *plugin = p->data;
+
+    if (strcmp (gst_plugin_get_source (plugin), PACKAGE) != 0)
+      continue;
+
+    features =
+        gst_registry_get_feature_list_by_plugin (gst_registry_get_default (),
+        gst_plugin_get_name (plugin));
+
+    for (f = features; f; f = f->next) {
+      GstPluginFeature *feature = f->data;
+      const gchar *name = gst_plugin_feature_get_name (feature);
+
+      if (!GST_IS_ELEMENT_FACTORY (feature))
+        continue;
+
+      GST_DEBUG ("testing element %s", name);
+      element = gst_element_factory_make (name, name);
+      if (GST_IS_PIPELINE (element)) {
+        GST_DEBUG ("element %s is a pipeline", name);
+      }
+
+      gst_element_set_state (element, GST_STATE_READY);
+      gst_element_set_state (element, GST_STATE_PAUSED);
+      gst_element_set_state (element, GST_STATE_PLAYING);
+      gst_element_set_state (element, GST_STATE_PAUSED);
+      gst_element_set_state (element, GST_STATE_READY);
+      gst_element_set_state (element, GST_STATE_NULL);
+      gst_element_set_state (element, GST_STATE_PAUSED);
+      gst_element_set_state (element, GST_STATE_READY);
+      gst_element_set_state (element, GST_STATE_PLAYING);
+      gst_element_set_state (element, GST_STATE_PAUSED);
+      gst_element_set_state (element, GST_STATE_NULL);
+      gst_object_unref (GST_OBJECT (element));
     }
-
-    gst_element_set_state (element, GST_STATE_READY);
-    gst_element_set_state (element, GST_STATE_PAUSED);
-    gst_element_set_state (element, GST_STATE_PLAYING);
-    gst_element_set_state (element, GST_STATE_PAUSED);
-    gst_element_set_state (element, GST_STATE_READY);
-    gst_element_set_state (element, GST_STATE_NULL);
-    gst_element_set_state (element, GST_STATE_PAUSED);
-    gst_element_set_state (element, GST_STATE_READY);
-    gst_element_set_state (element, GST_STATE_PLAYING);
-    gst_element_set_state (element, GST_STATE_PAUSED);
-    gst_element_set_state (element, GST_STATE_NULL);
-    gst_object_unref (GST_OBJECT (element));
   }
 }
 
